--- a/index.html
+++ b/index.html
@@ -5,19 +5,22 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
     <body>
-        <h1>
-            Alexandre Szybiak
-        </h1>
-        <h1 class="job-title">
-            ui designer
-        </h1>
-        <p>
-            Hi I'm Alexandre, I'm a UI Designer passionate about interactions, game mechanics and accessibility.
-I have a broad set of skills, from coding to art that helps me quickly express game ideas by making prototypes.
+        <div class="top">
+            <h1>
+                Alexandre<br>&nbsp;Szybiak
+            </h1>
+            <h2 class="job-title">
+                ui designer
+            </h2>
+        </div>
+        <p class="about-me">
+            Hi I'm Alexandre, I'm a UI Designer passionate about interactions, game mechanics and accessibility. I have a broad set of skills, from coding to art that helps me quickly express game ideas by making prototypes.
         </p>
-        <img src="img/rkb.jpg">
     </body>
 </html>
