--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Alexandre Szybiak</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;700&display=swap" rel="stylesheet">
@@ -12,9 +12,8 @@
     </head>
     <body>
         <div class="top">
-            <h1>
-                Alexandre<br>&nbsp;Szybiak
-            </h1>
+            <h1>Alexandre</h1>
+            <h1 class="surname">&nbsp;Szybiak</h1>
             <h2 class="job-title">
                 ui designer
             </h2>
