--- a/index.html
+++ b/index.html
@@ -11,15 +11,25 @@
         <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
     <body>
-        <div class="top">
-            <h1>Alexandre</h1>
-            <h1 class="surname">&nbsp;Szybiak</h1>
-            <h2 class="job-title">
-                ui designer
-            </h2>
+        <div class="section welcome-section">
+            <div class="top">
+                <h1>Alexandre</h1>
+                <h1 class="surname">&nbsp;Szybiak</h1>
+                <h2 class="job-title">
+                    ui designer
+                </h2>
+            </div>
+            <p class="about-me">
+                Hi I'm Alexandre, I'm a UI Designer passionate about interactions, game mechanics and accessibility. I have a broad set of skills, from coding to art that helps me quickly express game ideas by making prototypes.
+            </p>
         </div>
-        <p class="about-me">
-            Hi I'm Alexandre, I'm a UI Designer passionate about interactions, game mechanics and accessibility. I have a broad set of skills, from coding to art that helps me quickly express game ideas by making prototypes.
-        </p>
+        <div class="section projects-section">
+            <img class="project-card"
+                src="img/just_dance.jpg"
+                alt="Grapefruit slice atop a pile of other slices">
+            <div class="project-card"></div>
+            <div class="project-card"></div>
+            <div class="project-card"></div>
+        </div>
     </body>
 </html>
