Added project cards

--- a/index.html
+++ b/index.html
@@ -11,25 +11,55 @@
         <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
     <body>
-        <div class="section welcome-section">
-            <div class="top">
-                <h1>Alexandre</h1>
-                <h1 class="surname">&nbsp;Szybiak</h1>
-                <h2 class="job-title">
-                    ui designer
-                </h2>
+        <div class="content">
+            <div class="section welcome-section">
+                <div class="top">
+                    <h1>Alexandre</h1>
+                    <h1 class="surname">&nbsp;Szybiak</h1>
+                    <h2 class="job-title">
+                        ui designer
+                    </h2>
+                </div>
+                <p class="about-me">
+                    Hi I'm Alexandre, I'm a UI Designer passionate about interactions, game mechanics and accessibility. I have a broad set of skills, from coding to art that helps me quickly express game ideas by making prototypes.
+                </p>
             </div>
-            <p class="about-me">
-                Hi I'm Alexandre, I'm a UI Designer passionate about interactions, game mechanics and accessibility. I have a broad set of skills, from coding to art that helps me quickly express game ideas by making prototypes.
-            </p>
-        </div>
-        <div class="section projects-section">
-            <img class="project-card"
-                src="img/just_dance.jpg"
-                alt="Grapefruit slice atop a pile of other slices">
-            <div class="project-card"></div>
-            <div class="project-card"></div>
-            <div class="project-card"></div>
+            <div class="section projects-section">
+                <div class="project-card" >
+                    <img class="project-card-image" src="img/just_dance.jpg" alt="Just Dance">
+                    <div class="project-card-text-container">
+                        <p class="project-card-text">
+                            I've worked on several Just Dance opus, most notably on 2019 for which I developed the menu navigation prototype.
+                        </p>
+                    </div>
+                </div>
+                <div class="project-card" >
+                    <img class="project-card-image" src="img/rkb.jpg" alt="Mario + Rabbids">
+                    <div class="project-card-text-container">
+                        <p class="project-card-text">
+                            I did integration and nodal scripting on Mario+Rabbids.
+                            Animations too, both keyframes and procedural.
+                        </p>
+                    </div>
+                </div>
+                <div class="project-card" >
+                    <img class="project-card-image" src="img/tetrus.jpeg" alt="Tetris on a led-matrix">
+                    <div class="project-card-text-container">
+                        <p class="project-card-text">
+                            I developed a Tetris for a led-matrix screen that a friend built.
+                            It runs on a RaspberryPi and features one to one simulation on pc.
+                        </p>
+                    </div>
+                </div>
+                <div class="project-card" >
+                    <img class="project-card-image" src="img/puzezl.jpg" alt="Puzezl">
+                    <div class="project-card-text-container">
+                        <p class="project-card-text">
+                            Puzezl is a tile-based puzzle game, for which I developed a custom level editor.
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
