--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
                     <h2 class="job-title">
                         ui designer
                     </h2>
+                    <div class="top-buttons">
+                        <!-- <div class="button mail-button"></div> -->
+                    </div>
                 </div>
                 <p class="about-me">
                     Hi I'm Alexandre, I'm a UI Designer passionate about interactions, game mechanics and accessibility. I have a broad set of skills, from coding to art that helps me quickly express game ideas by making prototypes.
