Added link to puzezl walkthrough

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <div class="project-card-text-container">
                         <p class="project-card-text">
                             I did integration and nodal scripting on Mario+Rabbids.
-                            Animations too, both keyframes and procedural.
+                            UI animation too, both keyframe and procedural.
                         </p>
                     </div>
                 </div>
@@ -50,7 +50,7 @@
                     <div class="project-card-text-container">
                         <p class="project-card-text">
                             I developed a Tetris for a led-matrix screen that a friend built.
-                            It runs on a RaspberryPi and features one to one simulation on pc.
+                            It runs on a RaspberryPi and features accurate simulation on pc.
                         </p>
                     </div>
                 </div>
@@ -59,6 +59,10 @@
                     <div class="project-card-text-container">
                         <p class="project-card-text">
                             Puzezl is a tile-based puzzle game, for which I developed a custom level editor.
+                            <br/>
+                            <br/>
+                            <a href="https://www.youtube.com/watch?v=_PWclHjk42o" target="_blank">Watch a walkthrough on Youtube.</a>
+                
                         </p>
                     </div>
                 </div>
