--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <img class="project-card-image" src="img/puzezl.jpg" alt="Puzezl">
                     <div class="project-card-text-container">
                         <p class="project-card-text">
-                            Puzezl is a tile-based puzzle game, for which I developed a custom level editor.
+                            This personal project is called Puzezl, it's a game with a unique tile-based jigsaw puzzle system, for which I developed a custom editor.
                             <br/>
                             <br/>
                             <a href="https://www.youtube.com/watch?v=_PWclHjk42o" target="_blank">Watch a walkthrough on Youtube.</a>
