--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <div class="project-card-text-container">
                         <p class="project-card-text">
                             I did integration and nodal scripting on Mario+Rabbids.
-                            UI animation too, both keyframe and procedural.
+                            UI animation too, both keyframe and code-driven.
                         </p>
                     </div>
                 </div>
